# InteractVLM

./: .gitignore  README.md  optim_fit_many.py  pyproject.toml  run_demo2.py
model/: InteractVLM.py  components.py  wrapped_interactvlm.py
optim/: data_io.py  fit.py
optim/cfg/: fit.yaml
utils/: demo_utils.py
